fix purchases templates and notify task and trade merge

--- a/shopmanager/templates/purchases/purchase_page.html
+++ b/shopmanager/templates/purchases/purchase_page.html
@@ -196,7 +196,7 @@
 					<tr>
 						<td>
 							<label for='supplier'>供&nbsp;&nbsp;应&nbsp;&nbsp;商</label>
-							<select id='supplier'>
+							<select size="5" id='supplier'>
 								<option value='' >----请选择----</option>
 								{% for supplier in  suppliers %}
 								<option value='{{ supplier.id }}' {% if purchase.supplier_id == supplier.id %}selected{% endif %}>{{ supplier.supplier_name }}</option>
@@ -207,7 +207,7 @@
 						</td>
 						<td>
 							<label for='deposite'>仓&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;库</label>
-							<select id='deposite'>
+							<select size="5" id='deposite'>
 								<option value='' >----请选择----</option>
 								{% for deposite in  deposites %}
 								<option value='{{ deposite.id }}' {% if purchase.deposite_id == deposite.id %}selected{% endif %}>{{ deposite.deposite_name}}</option>
@@ -218,7 +218,7 @@
 						</td>
 						<td>
 							<label for='purchase_type'>采购类型</label>
-							<select id='purchase_type'>
+							<select size="5" id='purchase_type'>
 								<option value='' >----请选择----</option>
 								{% for purchase_type in  purchase_types %}
 								<option value='{{ purchase_type.id }}' {% if purchase.purchase_type_id == purchase_type.id %}selected{% endif %}>{{ purchase_type.type_name }}</option>
@@ -267,6 +267,7 @@
 					<div id="purchase-items">
 						<table id="purchaseitem-table" class="table table-bordered table-condensed">
 							<thead>
+								<tr>
 									<th>项目编号</th>
 									<th>商品编码</th>
 									<th>产品名</th>
@@ -276,6 +277,7 @@
 									<th style="width:70px;">采购数</th>
 									<th style="width:70px;">总费用</th>
 									<th>操作</th>
+								</tr>
 							</thead>
 							<tbody>
 								{% for item in purchase.purchase_items %}
@@ -310,6 +312,7 @@
 			<div id="id-prod-search-dialog" style="">
 				<table id="id-prod-search-table" class="table table-bordered">
 					<thead>
+						<tr>
 							<th>序号</th>
 							<th>图片</th>
 							<th>商家编码</th>
@@ -317,6 +320,7 @@
 							<th>库存数</th>
 							<th>创建日期</th>
 							<th>操作</th>
+						</tr>
 					</thead>
 					<tbody>
 					</tbody>
