--- a/shopmanager/templates/purchases/purchase_payment_page.html
+++ b/shopmanager/templates/purchases/purchase_payment_page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html >
   <head>
-    <title>创建采购单</title>
+    <title>采购付款单</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
      <link href="{{ STATIC_URL }}bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css" />
@@ -75,9 +75,15 @@
 			    </div>
 			  </div>
 			  <div class="control-group">
+			    <label class="control-label" for="origin_no">单据编号</label>
+			    <div class="controls">
+			      <input type="text" id="origin_no" name="origin_no" >
+			    </div>
+			  </div>
+			  <div class="control-group">
 			    <label class="control-label" for="purchase">采购单</label>
 			    <div class="controls">
-			      <select id="purchase" name="purchase">
+			      <select size="5" id="purchase" name="purchase">
 			      	<option value="">----请选择----</option>
 					{% for purchase in purchases %}
 					<option value="{{ purchase.id }}">{{ purchase.id }}|{{ purchase.service_date|date:"y-n-j" }}|{{ purchase.extra_name }}</option>
@@ -88,7 +94,8 @@
 			  <div class="control-group">
 			    <label class="control-label" for="storage">入库单</label>
 			    <div class="controls">
-			      <select id="storage" name="storage" multiple="multiple">
+			      <select size="8" id="storage" name="storage" multiple="multiple">
+			      	<option value="">----请选择----</option>
 			      	{% for storage in storages %}
 					<option value="{{ storage.id }}">{{ storage.id }}|{{ storage.post_date|date:"y-n-j" }}|{{ storage.extra_name }}</option>
 					{% endfor %}
@@ -102,15 +109,9 @@
 			    </div>
 			  </div>
 			  <div class="control-group">
-			    <label class="control-label" for="origin_no">单据编号</label>
+			  	<label class="control-label" for="add_cost">计入成本</label>
 			    <div class="controls">
-			      <input type="text" id="origin_no" name="origin_no" >
-			    </div>
-			  </div>
-			  <div class="control-group">
-			  	<label class="control-label" >计入成本</label>
-			    <div class="controls">
-			      <input type="checkbox" id="additional" name="additional">
+			      <input type="checkbox" id="add_cost" name="add_cost">
 			    </div>
 			  </div>
 			  <div class="control-group">
@@ -122,7 +123,7 @@
 			  <div class="control-group">
 			  	
 			  	<div class="controls">
-			  		<button type="submit" class="btn btn-primary">提交</button>
+			  		<button type="submit" class="btn btn-primary">创建付款单</button>
 			  		<label class="label badge-important">{{ object.error_msg }}</label>
 			  	</div>
 			  </div>
