--- a/shopmanager/templates/purchases/purchase_page.html
+++ b/shopmanager/templates/purchases/purchase_page.html
@@ -273,7 +273,7 @@
 									<th>产品名</th>
 									<th>规格编码</th>
 									<th>规格名</th>
-									<th style="width:70px;">实际进价</th>
+									<th style="width:70px;">标准进价</th>
 									<th style="width:70px;">采购数</th>
 									<th style="width:70px;">总费用</th>
 									<th>操作</th>
@@ -342,7 +342,7 @@
 						<th>商品名</th>
 						<th>规格编码</th>
 						<th>规格名</th>
-						<th>实际进价</th>
+						<th>标准进价</th>
 						<th>采购数</th>
 						<th>操作</th>
 				</thead>
