--- a/shopmanager/templates/purchases/apply_payment_page.html
+++ b/shopmanager/templates/purchases/apply_payment_page.html
@@ -94,7 +94,7 @@
   		{% endif %}
   		<div>
   			<div id="purchase-form-head" class="well well-small mywell">
-  				<label class="label label-info">{{ purchase.origin_no }}&nbsp;&nbsp;&nbsp;{{ purchase.title }}&nbsp;&nbsp;&nbsp;{{ purchase.service_date }}</label>
+  				<label class="label label-info">{{ purchase.origin_no }}&nbsp;&nbsp;&nbsp;{{ purchase.suppiler }}&nbsp;&nbsp;&nbsp;{{ purchase.title }}&nbsp;&nbsp;&nbsp;{{ purchase.service_date }}</label>
 	  			<div class="head-budget">
 	  				<label>总金额：</label><span>{{ purchase.total_fee }}&yen;</span>
 	  				<label>已付金额：</label><span>{{ purchase.payment }}&yen;</span>
