add trade logistic query and fix exchange product query stock

--- a/shopmanager/templates/admin/trades/change_list.html
+++ b/shopmanager/templates/admin/trades/change_list.html
@@ -78,7 +78,7 @@
             </li>
             <li>
               <a href="/trades/order/statistic/" class="addlink" target="_blank">
-                订单商品统计
+                商品统计
               </a>
             </li>
             <li>
@@ -88,7 +88,12 @@
             </li>
             <li>
               <a href="/trades/order/outstock/" class="addlink" target="_blank">
-                缺货商品列表
+                缺货商品
+              </a>
+            </li>
+            <li>
+              <a href="/trades/logistic/query/" class="addlink" target="_blank">
+                快递查询
               </a>
             </li>
           {% endblock %}
