fix classify buyer and trade logistic detail

--- a/shopmanager/templates/trades/trade_logistic_detail.html
+++ b/shopmanager/templates/trades/trade_logistic_detail.html
@@ -65,7 +65,7 @@
 		<div class="content-search">
 			<form action="./" method="POST">
 				<div class="navbar-search product-search">
-					<input type="text" name="q" class="input-medium search-query"  placeholder="商品搜索" />
+					<input type="text" name="q" class="input-medium search-query"  placeholder="快递搜索" />
 					<button type="submit" class="btn">搜索</button>
 				</div>
 			</form>
