--- a/shopmanager/templates/trades/check_order_template.html
+++ b/shopmanager/templates/trades/check_order_template.html
@@ -118,7 +118,7 @@
 				<select id="id-select-ordersku-{{ forloop.counter }}" name="id_order_sku">
 					<option value="">---------</option>
 					{% for sku in order|prod_skus %}
-					<option value="{{ sku.outer_id }}" {% if order.outer_sku_id == sku.outer_id %}selected{% endif %}>{{ sku.properties_name }}</option>
+					<option value="{{ sku.outer_id }}" {% if order.outer_sku_id == sku.outer_id %}selected{% endif %}>{{ sku.name }}</option>
 					{% endfor %}
 				</select> 
 			</td>
